# DD_programs

./: .gitattributes  README.md  pyproject.toml
C-BandRadar/: download_RDR_JMAGPV.py  rain.ipynb
C-BandRadar/data/2025/08/25/: Z__C_RJTD_etop_20250825000000.nc  Z__C_RJTD_etop_20250825001000.nc  Z__C_RJTD_etop_20250825002000.nc  Z__C_RJTD_etop_20250825003000.nc  Z__C_RJTD_etop_20250825004000.nc  Z__C_RJTD_etop_20250825005000.nc  Z__C_RJTD_etop_20250825010000.nc  Z__C_RJTD_etop_20250825011000.nc  Z__C_RJTD_etop_20250825012000.nc  Z__C_RJTD_etop_20250825013000.nc  Z__C_RJTD_etop_20250825014000.nc  Z__C_RJTD_etop_20250825015000.nc  Z__C_RJTD_etop_20250825020000.nc  Z__C_RJTD_etop_20250825021000.nc  Z__C_RJTD_etop_20250825022000.nc  Z__C_RJTD_etop_20250825023000.nc  Z__C_RJTD_etop_20250825024000.nc  Z__C_RJTD_etop_20250825025000.nc  Z__C_RJTD_etop_20250825030000.nc  Z__C_RJTD_etop_20250825031000.nc  Z__C_RJTD_etop_20250825032000.nc  Z__C_RJTD_etop_20250825033000.nc  Z__C_RJTD_etop_20250825034000.nc  Z__C_RJTD_etop_20250825035000.nc  Z__C_RJTD_etop_20250825040000.nc  Z__C_RJTD_etop_20250825041000.nc  Z__C_RJTD_etop_20250825042000.nc  Z__C_RJTD_etop_20250825043000.nc  Z__C_RJTD_etop_20250825044000.nc  Z__C_RJTD_etop_20250825045000.nc  Z__C_RJTD_etop_20250825050000.nc  Z__C_RJTD_etop_20250825051000.nc  Z__C_RJTD_etop_20250825052000.nc  Z__C_RJTD_etop_20250825053000.nc  Z__C_RJTD_etop_20250825054000.nc  Z__C_RJTD_etop_20250825055000.nc  Z__C_RJTD_etop_20250825060000.nc  Z__C_RJTD_etop_20250825061000.nc  (+250 more)
Parsivel/: 20220719_09_13  20240827  202508  drop_size_distribtion.ipynb
