[project]
name = "programs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "h5netcdf>=1.7.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "xarray>=2025.12.0",
]
